Better logging and support for Java 11 (OpenJDK)
Supporting Java 11 required dropping spyscope which, in turn, prompted
some logging cleanup to make it more structured and easier to interpret.